--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -96,7 +96,7 @@
   <customwidget>
    <class>TitleBar</class>
    <extends>QWidget</extends>
-   <header>TitleBar.h</header>
+   <header>widgets/TitleBar.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
