Fix mod ordering and titlebar

--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -1,6 +1,7 @@
 <!DOCTYPE RCC>
 <RCC version="1.0">
     <qresource>
-        <file alias="icon.png">../extras/logo/logo_toolbox_transparent.png</file>
+        <file alias="logo_toolbox.png">../extras/logo/logo_toolbox_transparent.png</file>
+        <file alias="logo_title.png">../extras/logo/logo_title_transparent.png</file>
     </qresource>
 </RCC>
