--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -55,13 +55,76 @@
     <item>
      <layout class="QHBoxLayout" name="hbox">
       <item>
-       <layout class="QVBoxLayout" name="leftBox"/>
+       <widget class="PanelFrame" name="leftPanel">
+        <property name="frameShape">
+         <enum>QFrame::StyledPanel</enum>
+        </property>
+        <layout class="QVBoxLayout" name="leftBox">
+         <property name="spacing">
+          <number>8</number>
+         </property>
+         <property name="leftMargin">
+          <number>8</number>
+         </property>
+         <property name="topMargin">
+          <number>8</number>
+         </property>
+         <property name="rightMargin">
+          <number>8</number>
+         </property>
+         <property name="bottomMargin">
+          <number>8</number>
+         </property>
+        </layout>
+       </widget>
       </item>
       <item>
-       <layout class="QVBoxLayout" name="middleBox"/>
+       <widget class="PanelFrame" name="middlePanel">
+        <property name="frameShape">
+         <enum>QFrame::StyledPanel</enum>
+        </property>
+        <layout class="QVBoxLayout" name="middleBox">
+         <property name="spacing">
+          <number>8</number>
+         </property>
+         <property name="leftMargin">
+          <number>8</number>
+         </property>
+         <property name="topMargin">
+          <number>8</number>
+         </property>
+         <property name="rightMargin">
+          <number>8</number>
+         </property>
+         <property name="bottomMargin">
+          <number>8</number>
+         </property>
+        </layout>
+       </widget>
       </item>
       <item>
-       <layout class="QVBoxLayout" name="rightBox"/>
+       <widget class="PanelFrame" name="rightPanel">
+        <property name="frameShape">
+         <enum>QFrame::StyledPanel</enum>
+        </property>
+        <layout class="QVBoxLayout" name="rightBox">
+         <property name="spacing">
+          <number>8</number>
+         </property>
+         <property name="leftMargin">
+          <number>8</number>
+         </property>
+         <property name="topMargin">
+          <number>8</number>
+         </property>
+         <property name="rightMargin">
+          <number>8</number>
+         </property>
+         <property name="bottomMargin">
+          <number>8</number>
+         </property>
+        </layout>
+       </widget>
       </item>
      </layout>
     </item>
@@ -73,6 +136,12 @@
    <class>TitleBar</class>
    <extends>QWidget</extends>
    <header>widgets/TitleBar.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>PanelFrame</class>
+   <extends>QFrame</extends>
+   <header>widgets/PanelFrame.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
