--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -4,5 +4,13 @@
         <file alias="logo_toolbox.png">../extras/logo/logo_toolbox_fit_transparent.png</file>
         <file alias="logo_title.png">../extras/logo/logo_title_transparent.png</file>
         <file alias="icon_edit.png">../extras/icons/icon_edit.png</file>
+        <file alias="icon_profile.png">../extras/icons/icon_profile.png</file>
+        <file alias="icon_delete.png">../extras/icons/icon_delete.png</file>
+        <file alias="icon_export.png">../extras/icons/icon_export.png</file>
+        <file alias="icon_import.png">../extras/icons/icon_import.png</file>
+        <file alias="icon_checkmark.png">../extras/icons/icon_checkmark.png</file>
+        <file alias="tex_main.png">../extras/textures/tex_main.png</file>
+        <file alias="tex_panel.png">../extras/textures/tex_panel.png</file>
+        <file alias="tex_container.png">../extras/textures/tex_container.png</file>
     </qresource>
 </RCC>
