--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -12,6 +12,7 @@
         <file alias="icon_settings.png">../extras/icons/icon_settings.png</file>
         <file alias="icon_update.png">../extras/icons/icon_update.png</file>
         <file alias="icon_conflict.png">../extras/icons/icon_conflict.png</file>
+        <file alias="icon_down.png">../extras/icons/icon_down.png</file>
         <file alias="tex_main.png">../extras/textures/tex_main.png</file>
         <file alias="tex_panel.png">../extras/textures/tex_panel.png</file>
         <file alias="tex_container.png">../extras/textures/tex_container.png</file>
